Creates new branch | Adds animate blink effect to main nav and white 'stamp' img

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Direct Mortgages | Home</title>
 
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <!-- SupraNav 
@@ -35,11 +39,11 @@
 ------------------------------------------- -->
     <nav class="main-nav-wrap bg-dark txt-white">
       <ul class="main-nav flex txt-center">
-        <li class="main-nav-link hover-transition hover-pink border-left">
+        <li class="main-nav-link border-left">
           <a href="index.html">Home</a>
         </li>
         <!-- Bad Credit -->
-        <li class="main-nav-link hover-transition hover-pink border-left">
+        <li class="main-nav-link border-left">
           <label for="bad-credit-input" class="dropdown no-display"
             >Bad Credit</label
           >
@@ -125,7 +129,7 @@
           </ul>
         </li>
         <!-- Mortgages -->
-        <li class="main-nav-link hover-transition hover-pink border-left">
+        <li class="main-nav-link border-left">
           <label for="mortgages-input" class="dropdown no-display"
             >Mortgages</label
           >
@@ -176,7 +180,7 @@
           </ul>
         </li>
         <!-- Protection -->
-        <li class="main-nav-link hover-transition hover-pink border-left">
+        <li class="main-nav-link border-left">
           <label for="protection-input" class="dropdown no-display"
             >Protection</label
           >
@@ -216,9 +220,7 @@
             </li>
           </ul>
         </li>
-        <li
-          class="main-nav-link hover-transition hover-pink border-left border-right"
-        >
+        <li class="main-nav-link border-left border-right">
           <a href="#">Contact Us</a>
         </li>
       </ul>
