Forgot to add index.html to previous commit

--- a/index.html
+++ b/index.html
@@ -229,8 +229,11 @@
     <!-- Header 
 ------------------------------------------- -->
     <header>
-      <!-- Pink Banner -->
-      <div class="bg-fuschia txt-dark txt-center uppercase" id="sub-nav-msg">
+      <!-- Pink Banner Top -->
+      <div
+        class="bg-fuschia txt-dark txt-center uppercase"
+        id="pink-banner-top"
+      >
         <h1 class="txt-900">Problems getting a mortgage? We can sort it!</h1>
       </div>
       <!-- White Banner -->
@@ -253,6 +256,13 @@
           src="assets/denied.png"
           alt="a rubber stamp of the words access denied"
         />
+      </div>
+      <!-- Pink Banner Bottom -->
+      <div
+        class="bg-fuschia txt-dark txt-center uppercase"
+        id="pink-banner-bottom"
+      >
+        <h1 class="txt-900">We get mortgages where others can't!</h1>
       </div>
     </header>
   </body>
