Adds Bad Credit section header with responsiveness down toabout 1280 and alayout which deviates from mockup

--- a/index.html
+++ b/index.html
@@ -139,42 +139,42 @@
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Income</a
+                >Mortgages</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Proof Of Income</a
+                >Re-Mortgages</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Credit History</a
+                >Buy-to-lets</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Credit Score</a
+                >First Time Buyers</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Repossession</a
+                >Let to buy</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >IVA's</a
+                >Council Right To Buy</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >CCJ's</a
+                >Commercial Finance</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Bankruptcy</a
+                >Bridge Finance</a
               >
             </li>
           </ul>
@@ -190,32 +190,32 @@
           <ul class="dropdown-menu">
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Income</a
+                >Protection</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Proof Of Income</a
+                >Life Insurance</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >No Credit History</a
+                >CIC</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Low Credit Score</a
+                >IPU</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >Repossession</a
+                >ASU</a
               >
             </li>
             <li class="dropdown-link-wrap">
               <a href="" class="dropdown-link hover-transition hover-pink"
-                >IVA's</a
+                >Building & Contents Insurance</a
               >
             </li>
           </ul>
@@ -265,5 +265,97 @@
         <h1 class="txt-900">We get mortgages where others can't!</h1>
       </div>
     </header>
+
+    <!-- Bad Credit 
+------------------------------------------- -->
+    <section id="bad-credit" class="panel bg-dark txt-white">
+      <!-- Heading -->
+      <div class="panel-heading flex">
+        <div class="title">
+          <h2 class="uppercase txt-900">Bad Credit</h2>
+          <div class="h-underline"></div>
+          <h3 class="uppercase txt-900">Mortgage Experts</h3>
+        </div>
+        <p class="subheading">
+          We specialise in poor credit mortgage applications and focus on
+          sourcing the very best mortgage solutions regardless of adverse credit
+          history.
+        </p>
+      </div>
+      <div class="p-underline"></div>
+      <!-- Link Wrap ----------------------------->
+      <div class="link-list-wrap flex">
+        <img src="assets/bad-credit.svg" alt="" />
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Low Income</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">No Proof Of Income</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">No credit History</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Low Credit Score</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Repossession</a>
+          </li>
+        </ul>
+        <!-- Link List ------------------------>
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">IVA's</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">CCJ's</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Bankruptcy</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Defaults</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Payday Loans</a>
+          </li>
+        </ul>
+        <!-- Link List -------------------------->
+        <ul class="link-list">
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Self Employed No Accounts</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Missed Mortgage Payments</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Adverse Credit Problems</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Low Deposit Schemes</a>
+          </li>
+          <li class="flex">
+            <img src="assets/check.svg" alt="" class="check" />
+            <a href="#" class="uppercase txt-900">Zero Hour Contracts</a>
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
