Adds Credit Meter Image section - further responsive styling needed

--- a/index.html
+++ b/index.html
@@ -357,5 +357,25 @@
         </ul>
       </div>
     </section>
+
+    <!-- Credit Meter 
+------------------------------------------- -->
+    <section class="panel bg-dark" id="credit-meter">
+      <div id="credit-meter-wrap" class="flex">
+        <div class="quote-wrap">
+          <div class="quote bg-fuschia txt-white" id="left-quote">
+            <p>Can I still get a mortage with bad credit?</p>
+          </div>
+          <img src="assets/worried.png" alt="" class="speaker-img" />
+        </div>
+        <img src="assets/credit-rating.svg" alt="" id="credit-meter-img" />
+        <div class="quote-wrap">
+          <div class="quote bg-fuschia txt-white" id="right-quote">
+            <p>Yes it IS possible. We can get you a mortage!</p>
+          </div>
+          <img src="assets/agent.png" alt="" class="speaker-img" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
