Adds animation and some more responsiveness to CreditMeter Banner

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <header>
       <!-- Pink Banner Top -->
       <div
-        class="bg-fuschia txt-dark txt-center uppercase"
+        class="bg-fuschia txt-dark txt-center uppercase blink-alt"
         id="pink-banner-top"
       >
         <h1 class="txt-900">Problems getting a mortgage? We can sort it!</h1>
@@ -259,10 +259,10 @@
       </div>
       <!-- Pink Banner Bottom -->
       <div
-        class="bg-fuschia txt-dark txt-center uppercase"
+        class="bg-fuschia txt-dark txt-center uppercase blink-alt"
         id="pink-banner-bottom"
       >
-        <h1 class="txt-900">We get mortgages where others can't!</h1>
+        <h1 class="txt-900">We get mortgages where others fail</h1>
       </div>
     </header>
 
@@ -363,14 +363,20 @@
     <section class="panel bg-dark" id="credit-meter">
       <div id="credit-meter-wrap" class="flex">
         <div class="quote-wrap">
-          <div class="quote bg-fuschia txt-white" id="left-quote">
-            <p>Can I still get a mortage with bad credit?</p>
+          <div
+            class="quote bg-fuschia txt-white animate__animated animate__pulse animate__infinite"
+            id="left-quote"
+          >
+            <p>Can I still get a mortgage with bad credit?</p>
           </div>
           <img src="assets/worried.png" alt="" class="speaker-img" />
         </div>
         <img src="assets/credit-rating.svg" alt="" id="credit-meter-img" />
         <div class="quote-wrap">
-          <div class="quote bg-fuschia txt-white" id="right-quote">
+          <div
+            class="quote bg-fuschia txt-white animate__animated animate__pulse animate__infinite"
+            id="right-quote"
+          >
             <p>Yes it IS possible. We can get you a mortage!</p>
           </div>
           <img src="assets/agent.png" alt="" class="speaker-img" />
