Adds Specialists Section w/ responsiveness down to 1280. Albeit quite messily

--- a/index.html
+++ b/index.html
@@ -369,7 +369,11 @@
           >
             <p>Can I still get a mortgage with bad credit?</p>
           </div>
-          <img src="assets/worried.png" alt="" class="speaker-img" />
+          <img
+            src="assets/worried.png"
+            alt=""
+            class="speaker-img animate__animated animate__headShake animate__infinite"
+          />
         </div>
         <img src="assets/credit-rating.svg" alt="" id="credit-meter-img" />
         <div class="quote-wrap">
@@ -381,6 +385,110 @@
           </div>
           <img src="assets/agent.png" alt="" class="speaker-img" />
         </div>
+      </div>
+    </section>
+
+    <!-- Credit Meter 
+------------------------------------------- -->
+    <section class="bg-dark flex" id="specialists">
+      <!-- Left Column ----------------------------->
+      <div class="left-column bg-white" id="specialists-left">
+        <img src="assets/dm-logo-light.svg" alt="" id="logo" />
+        <h2 class="txt-900">Specialists In Our Field</h2>
+        <h3>
+          We specialise in complex mortgage cases, including proving income or
+          low income, self-employment, and adverse or low credit
+          scoreapplications.
+        </h3>
+        <p>
+          Based in the city of London, for over 25 years we have helped clients
+          all over the UK who have been refused by their bank or high street
+          lender to obtain mortgages. We help clients on a daily basis who
+          struggle to raise funding, whether that be for a purchase –
+          re-mortgage – buy to let -commercial or first-time buyers. We pride
+          ourselves on getting results for clients who face difficulties
+          obtaining a mortgage in today’s market.
+        </p>
+        <p>
+          We offer free, no obligation, expert comprehensive advice – every
+          time. We are totally independent and have access to the whole of the
+          UK lending market, including private funders who purely focus and
+          specialise in low income and adverse lending.
+        </p>
+        <p>
+          Here at Direct Mortgages, we fully appreciate how difficult and
+          daunting this process can be. The anxiety of waiting for lenders to
+          say ‘yes’, and then the frustration of being refused a mortgage time
+          and time again. We can help even if you have been turned down
+          elsewhere!
+        </p>
+        <p>
+          Lean on our expertise and take advantage of our vast knowledge and
+          years of funding contacts. You are not alone, we will provide you with
+          the guidance required to see your case through fully from start to
+          finish, and can even arrange highly experienced conveyancing
+          solicitors to represent you.
+        </p>
+        <p>
+          At Direct Mortgages, we guarantee from the moment we receive your
+          instruction of appointment, we will be relentless in the quest to get
+          you the ‘yes’ acceptance you need and your official mortgage offer. We
+          do not use comparable websites, we are direct with banks and funders,
+          with the latest software enabling us to get the very best interest
+          rate deals available in the UK at a touch of a button.
+        </p>
+        <h3>
+          If you need our assistance in getting funding we are more than happy
+          to help. We are available 7 days a week (Saturdays & Sundays 11am –
+          5pm).
+        </h3>
+        <div class="bg-dark" id="specialists-number">
+          <h4 class="txt-white uppercase">
+            Call us free on<a href="tel:+448000113395" class="txt-fuschia"
+              >0800 011 3395</a
+            >
+          </h4>
+          <h4 class="txt-white uppercase bg-dark">
+            Or<a href="mailto:info@directmortgagesuk.com" class="txt-fuschia"
+              >info@directmortgagesuk.com</a
+            >
+          </h4>
+        </div>
+      </div>
+      <!-- Right Column ---------------------->
+      <div class="right-column uppercase txt-900 txt-center">
+        <div class="bg-dark" id="refused">
+          <h2 class="txt-white">
+            <span class="txt-fuschia">Refused</span><br />
+            by your bank or high st lender?
+          </h2>
+        </div>
+        <div class="bg-white" id="call-us">
+          <h3>Call Us!</h3>
+          <h4>We get results!</h4>
+        </div>
+        <div class="bg-dark" id="if-we-cant">
+          <h2 class="txt-white">
+            If we can't<br />raise you<br /><span id="funding">funding</span
+            ><br />
+            <span id="nobody" class="txt-fuschia">Nobody Can!</span>
+          </h2>
+        </div>
+        <div class="bg-fuschia txt-white" id="free">
+          <h4>Free Consultation</h4>
+        </div>
+        <div id="lines-open">
+          <h5>Lines Open 7 Days</h5>
+          <a href="tel:+448000113395" class="number txt-fuschia"
+            >0800 011 3395</a
+          >
+          <a
+            href="mailto:info@directmortgagesuk.com"
+            class="mail-link txt-white"
+            >info@directmortgagesuk.com</a
+          >
+        </div>
+        <img src="assets/agent-2.png" alt="" />
       </div>
     </section>
   </body>
