Adds Gurantee / Simply Callsection with responsiveness down to ~ 1280

--- a/index.html
+++ b/index.html
@@ -714,7 +714,29 @@
         </div>
       </aside>
     </article>
+
+    <!-- Simply Call & Guarantee Banner
+------------------------------------------- -->
+
+    <!-- Guarantee Banner -->
+    <div id="guarantee" class="txt-white txt-center">
+      <h2 class="txt-900">Independent Mortgage Brokers</h2>
+      <h3 class="uppercase txt-900">
+        Our<br /><span class="txt-fuschia">Guarantee</span>
+      </h3>
+      <p>
+        We are dedicated to providing clients with the highest levels of
+        customer satisfaction by identifying their needs and wishes and working
+        to achieve the very best possible resolution
+      </p>
+      <div class="bg-white txt-dark uppercase" id="simply-call">
+        <h3 class="txt-900">Simply Call</h3>
+        <h2 class="txt-900">0800 011 3395</h2>
+        <h5 class="bg-fuschia txt-white txt-900">
+          Free call 24hr - 7 days a week
+        </h5>
+      </div>
+    </div>
     <script src="script.js"></script>
-    <script src="slider-script.js"></script>
   </body>
 </html>
